--- a/server/package.json
+++ b/server/package.json
@@ -31,14 +31,17 @@
     "discord.js": "^14.16.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.5.0",
     "helmet": "^8.0.0",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^7.0.12",
     "rate-limit-redis": "^4.2.0",
     "socket.io": "^4.8.1",
     "uuid": "^11.0.3",
+    "xss-clean": "^0.1.4",
     "zod": "^3.24.1"
   },
   "devDependencies": {
